little improvement on productController and filter products by market and technologies on frontend