@@ -3,13 +3,11 @@ package com.borlot.gubeeapp.products.adapter.in.web;
 import com.borlot.gubeeapp.products.adapter.out.persistence.ProductRepositoryImpl;
 import com.borlot.gubeeapp.products.application.service.AllProducts;
 import com.google.gson.Gson;
-import com.sun.net.httpserver.HttpContext;
 import com.sun.net.httpserver.HttpServer;
 
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.InetSocketAddress;
-import java.util.stream.Collectors;
 
 public class ProductController {
     public static void rest() throws IOException {
@@ -21,7 +19,7 @@ public class ProductController {
         server.createContext("/products", exchange -> {
             if ("GET".equals(exchange.getRequestMethod())) {
                 Gson gson = new Gson();
-                String productJson = gson.toJson(allProducts.execute().stream().map(ProductDTO::new).collect(Collectors.toList()));
+                String productJson = gson.toJson(allProducts.execute().stream().map(ProductDTO::new).toList());
                 exchange.getResponseHeaders().set("Content-Type", "application/json");
                 exchange.getResponseHeaders().set("Access-Control-Allow-Origin", "*");
                 exchange.sendResponseHeaders(200, productJson.getBytes().length);
